WebHelpers ChangeLog
====================

tip (development version)
-------------------------
* webhelpers.constants:
  - Fix spelling of Massachusetts.
* webhelpers.html:
  - New ``HTML.cdata()`` method for producing "<!![CDATA[ ... ]]>" sections.
  - The basic tag builders (``HTML.a()`` and ``HTML.tag("a")``) now have a
    ``_nl`` arg which, if true, inserts a newline between content elements
    and at the end of the tag for readability.  Example:  
        HTML.a("A", "B", href="/")  =>   '<a href="/">AB</a>'
        HTML.a("A", "B", href="/", _nl=True)   =>   '<a href="/">\nA\nB\n</a>\n'
    This does not affect HTML attributes nor the higher-level tag helpers.
    The exact spacing is subject to change.  The tag building code has been
    refactored to accommodate this.
* webhelpers.html.tags:
  - ``form()`` puts its hidden "_method" field in a '<div style="display:none">'
    to conform to XHTML syntax. The style prevents the div from being displayed
    or affecting the layout. A new arg ``hidden_fields`` may be a dict or
    iterable of additional hidden fields, which will be added to the div.
  - Set magic ID attribute in ``hidden`` helper to match behavior of the other
    tag helpers.
  - ``image()`` can now calculate the width and height automatically
    from an image file, using either the PIL algorithm or the pure Python
    algorithm in ``webhelpers.media``. It also logs the dimensions to the
    debug log for troubleshooting.
* webhelpers.html.tools:
  - Reimplement ``highlight()`` using the HTML builder. New arguments add
    flexibility.  Deprecate the ``highlighter`` argument, which creates tags
    via string interpolation.
  - Fix HTML overescaping and underescaping in auto_link().  Patch by Marius
    Gedminas.  A parsing bug remains: 
    http://pylonshq.com/project/pylonshq/ticket/657
* webhelpers.markdown / webhelpers.html.converters:
  - Deprecate ``webhelpers.markdown``, which is Markdown 1.7 without its